--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
   </style>
 </head>
 <body>
-  <h1>Hello, I'm Your Name</h1>
-  <p>Welcome to my homepage.</p>
-  <a href="Resume.pdf" target="_blank">📄 View My Resume</a>
-  <a href="https://github.com/yourusername" target="_blank">💻 GitHub</a>
-  <a href="https://linkedin.com/in/yourprofile" target="_blank">🔗 LinkedIn</a>
-  <a href="https://yourusername.github.io/your-other-project" target="_blank">🌐 My Other Website</a>
+  <h1>Dylan Tiffany's Homepage</h1>
+  <a href="PersonalSite/Resume.pdf" target="_blank">📄 View My Resume</a>
+  <a href="https://github.com/dtiffany" target="_blank">💻 GitHub</a>
+  <a href="https://linkedin.com/in/dylan-tiffany" target="_blank">🔗 LinkedIn</a>
+  <a href="https://yourusername.github.io/Learn-Calc" target="_blank">🌐 My Other Website</a>
 </body>
 </html>
