--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h1>Dylan Tiffany's Homepage</h1>
   <a href="PersonalSite/Dylan%27s%20Resume.pdf" target="_blank">📄 View My Resume</a>
   <a href="https://github.com/dtiffany" target="_blank">💻 GitHub</a>
-  <a href="https://linkedin.com/in/dylan-tiffany" target="_blank">🔗 LinkedIn</a>
+  <a href="https://www.linkedin.com/in/dylan-tiffany-513a63178/" target="_blank">🔗 LinkedIn</a>
   <a href="https://yourusername.github.io/Learn-Calc" target="_blank">🌐 My Other Website</a>
 </body>
 </html>
