--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   <a href="PersonalSite/Dylan%27s%20Resume.pdf" target="_blank">📄 View My Resume</a>
   <a href="https://github.com/dtiffany" target="_blank">💻 GitHub</a>
   <a href="https://www.linkedin.com/in/dylan-tiffany-513a63178" target="_blank">🔗 LinkedIn</a>
-  <a href="https://yourusername.github.io/Learn-Calc" target="_blank">🌐 My Other Website</a>
+  <a href="https://dtiffany.github.io/Learn-Calc" target="_blank">🌐 My Other Website</a>
 </body>
 </html>
