--- a/index.html
+++ b/index.html
@@ -15,5 +15,19 @@
   <a href="https://github.com/dtiffany" target="_blank">💻 GitHub</a>
   <a href="https://www.linkedin.com/in/dylan-tiffany-513a63178" target="_blank">🔗 LinkedIn</a>
   <a href="https://dtiffany.github.io/Learn-Calc" target="_blank">🌐 My Calculus Help Site</a>
+
+  <h2>About Me:</h2>
+  <h4>I am an Oregonian, who has a passion for education, tech, and math. Math has always been my 
+  favorite subject in school, especially since this passion has blossomed into me being a math 
+  tutor for roughly 10 years. Through helping hundreds of students over time, I started to realize
+  I was focussing on the same points for most students. Math is something most American students feel
+  disgust for, and I believe that comes from a lack of a well rounded math curriculum. After coming
+  to this realization, I found my career path. I knew I wanted to create educational material and
+  tools to help students realize their true academic potential. Combining my background in working
+  in different educational settings, with my technical skills in Math & Computer Science, I think
+  my career will be in the Educational Tech sector. Whether that is to help design curriculum, create
+  more intuitive UI/UX design, or design software to create more engaging learning environemnts for
+  students, I think working in this field is not only the best fit professioanlly, but is the best fit
+  for who I am as a person.</h4>
 </body>
 </html>
