Styling About Me

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name</title>
+  <title>Dylan Tiffany</title>
   <style>
     body { font-family: sans-serif; text-align: center; padding: 50px; }
     a { display: block; margin: 10px 0; font-size: 18px; color: blue; text-decoration: none; }
@@ -14,10 +14,19 @@
   <a href="PersonalSite/Dylan%27s%20Resume.pdf" target="_blank">📄 View My Resume</a>
   <a href="https://github.com/dtiffany" target="_blank">💻 GitHub</a>
   <a href="https://www.linkedin.com/in/dylan-tiffany-513a63178" target="_blank">🔗 LinkedIn</a>
-  <a href="https://dtiffany.github.io/Learn-Calc" target="_blank">🌐 My Calculus Help Site</a>
+  <a href="https://dtiffany.github.io/Learn-Calc" target="_blank">🌐 My Calculus Help Site - Calculus Quest</a>
 
-  <h2>About Me:</h2>
-  <h4>I am an Oregonian, who has a passion for education, tech, and math. Math has always been my 
+  <h2 style="text-align: right;";>About Me:</h2>
+  <h4 style="
+  border: 1px solid #ccc;
+  background-color: #f9f9f9;
+  padding: 15 px;
+  width: fit-content;
+  max-width: 600px;
+  margin: 0 auto;
+  text-align: left;
+  ">
+  I am an Oregonian, who has a passion for education, tech, and math. Math has always been my 
   favorite subject in school, especially since this passion has blossomed into me being a math 
   tutor for roughly 10 years. Through helping hundreds of students over time, I started to realize
   I was focussing on the same points for most students. Math is something most American students feel
