Fixing About Me styling

--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
   <a href="https://www.linkedin.com/in/dylan-tiffany-513a63178" target="_blank">🔗 LinkedIn</a>
   <a href="https://dtiffany.github.io/Learn-Calc" target="_blank">🌐 My Calculus Help Site - Calculus Quest</a>
 
-  <h2 style="text-align: right;";>About Me:</h2>
-  <h4 style="
+  <div style="height: 50px;"></div>
+
+
+  <h2 style="text-align: left;";>About Me:</h2>
+  <h5 style="
   border: 1px solid #ccc;
   background-color: #f9f9f9;
   padding: 15 px;
@@ -37,6 +40,6 @@
   my career will be in the Educational Tech sector. Whether that is to help design curriculum, create
   more intuitive UI/UX design, or design software to create more engaging learning environemnts for
   students, I think working in this field is not only the best fit professioanlly, but is the best fit
-  for who I am as a person.</h4>
+  for who I am as a person.</h5>
 </body>
 </html>
