Better Styling About Me

--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
 
   <div style="height: 50px;"></div>
 
-
-  <h2 style="text-align: left;";>About Me:</h2>
+  <div style="text-align: left;">
+  <h2>About Me:</h2>
   <h5 style="
-  border: 1px solid #ccc;
-  background-color: #f9f9f9;
-  padding: 15 px;
+  border: 2px solid #ccc;
+  background-color: #f9f9f9ae;
+  padding: 30 px;
   width: fit-content;
-  max-width: 600px;
-  margin: 0 auto;
-  text-align: left;
+  max-width: 900px;
+  margin: 3 auto;
   ">
   I am an Oregonian, who has a passion for education, tech, and math. Math has always been my 
   favorite subject in school, especially since this passion has blossomed into me being a math 
@@ -41,5 +40,6 @@
   more intuitive UI/UX design, or design software to create more engaging learning environemnts for
   students, I think working in this field is not only the best fit professioanlly, but is the best fit
   for who I am as a person.</h5>
+  </div>
 </body>
 </html>
