--- a/index.html
+++ b/index.html
@@ -5,8 +5,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dylan Tiffany</title>
   <style>
-    body { font-family: sans-serif; text-align: center; padding: 50px; }
-    a { display: block; margin: 10px 0; font-size: 18px; color: blue; text-decoration: none; }
+    body { 
+      font-family: Arial, sans-serif; 
+      padding: 50px;
+      background: linear-gradient(to bottom right, #2f4f4f, #1e90ff);
+      color: #ffffff;
+      margin: 0;
+    }
+
+    h1 {
+      font-size: 36px;
+      margin-bottom: 30px;
+    }
+
+    a {
+      display: block;
+      marginL 10px 0;
+      font-size: 18px;
+      color: #cce7ff;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    .about-container {
+      max-width: 800px;
+      margin: 60px auto 0;
+      text-align: left;
+    }
+
+    .about-title {
+      text-align: right;
+      font-size: 24px;
+      font-weight: normal;
+      margin-bottom: 15px;
+    }
+
+    .about-box {
+      background-color: rgba(255, 255, 255, 0.9);
+      color: #333;
+      padding: 20px 30px;
+      border: 2px solid #ccc;
+      border-radius: 8px;
+      font-size: 16px;
+      line-height: 1.6;
+    }
   </style>
 </head>
 <body>
@@ -18,28 +63,24 @@
 
   <div style="height: 50px;"></div>
 
-  <div style="text-align: left;">
-  <h2>About Me:</h2>
-  <h5 style="
-  border: 2px solid #ccc;
-  background-color: #f9f9f9ae;
-  padding: 30 px;
-  width: fit-content;
-  max-width: 900px;
-  margin: 3 auto;
-  ">
-  I am an Oregonian, who has a passion for education, tech, and math. Math has always been my 
-  favorite subject in school, especially since this passion has blossomed into me being a math 
-  tutor for roughly 10 years. Through helping hundreds of students over time, I started to realize
-  I was focussing on the same points for most students. Math is something most American students feel
-  disgust for, and I believe that comes from a lack of a well rounded math curriculum. After coming
-  to this realization, I found my career path. I knew I wanted to create educational material and
-  tools to help students realize their true academic potential. Combining my background in working
-  in different educational settings, with my technical skills in Math & Computer Science, I think
-  my career will be in the Educational Tech sector. Whether that is to help design curriculum, create
-  more intuitive UI/UX design, or design software to create more engaging learning environemnts for
-  students, I think working in this field is not only the best fit professioanlly, but is the best fit
-  for who I am as a person.</h5>
+  <div class="about-container">
+    <h2 class= "about-title">About Me:</h2>
+    <div class="about-box">
+      I am an Oregonian, who has a passion for education, tech, and math. Math has always been my 
+      favorite subject in school, especially since this passion has blossomed into me being a math 
+      tutor for roughly 10 years. Through helping hundreds of students over time, I started to realize
+      I was focussing on the same points for most students. Math is something most American students feel
+      disgust for, and I believe that comes from a lack of a well rounded math curriculum. After coming
+      to this realization, I found my career path. I knew I wanted to create educational material and
+      tools to help students realize their true academic potential. Combining my background in working
+      in different educational settings, with my technical skills in Math & Computer Science, I think
+      my career will be in the Educational Tech sector. Whether that is to help design curriculum, create
+      more intuitive UI/UX design, or design software to create more engaging learning environemnts for
+      students, I think working in this field is not only the best fit professioanlly, but is the best fit
+      for who I am as a person.</h4>
+    </div>
+
+  
   </div>
 </body>
 </html>
