Editing About Me Section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     }
 
     .about-title {
-      text-align: right;
+      text-align: left;
       font-size: 24px;
       font-weight: normal;
       margin-bottom: 15px;
@@ -67,14 +67,14 @@
     <h2 class= "about-title">About Me:</h2>
     <div class="about-box">
       I am an Oregonian, who has a passion for education, tech, and math. Math has always been my 
-      favorite subject in school, especially since this passion has blossomed into me being a math 
-      tutor for roughly 10 years. Through helping hundreds of students over time, I started to realize
+      favorite subject in school, especially since this passion has blossomed into a 10 year tutoring career. 
+      Through helping hundreds of students over the years, I started to realize
       I was focussing on the same points for most students. Math is something most American students feel
       disgust for, and I believe that comes from a lack of a well rounded math curriculum. After coming
       to this realization, I found my career path. I knew I wanted to create educational material and
       tools to help students realize their true academic potential. Combining my background in working
-      in different educational settings, with my technical skills in Math & Computer Science, I think
-      my career will be in the Educational Tech sector. Whether that is to help design curriculum, create
+      in different educational settings, with my technical skills in Math & Computer Science, my career path
+      is headed straight for the Educational Tech sector. Whether that is to help design curriculum, create
       more intuitive UI/UX design, or design software to create more engaging learning environemnts for
       students, I think working in this field is not only the best fit professioanlly, but is the best fit
       for who I am as a person.</h4>
