--- a/index.html
+++ b/index.html
@@ -56,10 +56,17 @@
 </head>
 <body>
   <h1>Dylan Tiffany's Homepage</h1>
+
+  <h2>Find Me</h2>
   <a href="PersonalSite/Dylan%27s%20Resume.pdf" target="_blank">📄 View My Resume</a>
   <a href="https://github.com/dtiffany" target="_blank">💻 GitHub</a>
   <a href="https://www.linkedin.com/in/dylan-tiffany-513a63178" target="_blank">🔗 LinkedIn</a>
+  
+  
+  <h2 style="margin-top: 30px;">Projects</h2>
   <a href="https://dtiffany.github.io/Learn-Calc" target="_blank">🌐 My Calculus Help Site - Calculus Quest</a>
+  <a href="https://play.unity.com/en/games/44c65e61-f2ec-4ec2-a9a0-fee38bbce871/white-whale" target="_blank">🎮 White Whale Video Game</a>
+  <a href="https://github.com/dtiffany/MapPrototype" target="_blank">🗺️ MapPrototype GitHub Project</a>
 
 
   <div class="about-container">
