Fixing problem with index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     a {
       display: block;
-      marginL 10px 0;
+      margin: 10px 0;
       font-size: 18px;
       color: #cce7ff;
       text-decoration: none;
